--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="mob_olny">
     <div class="rel">
       <div class="header_left">
-        <a href="#" class="mob_btn mOpen">
+        <a href="#none" class="mob_btn mOpen">
           <span>1</span>
           <span>2</span>
           <span>3</span>
