반응형 PC버전 네비게이션바 수정

--- a/index.html
+++ b/index.html
@@ -18,67 +18,11 @@
   <header class="mob_olny">
     <div class="rel">
       <div class="header_left">
-        <a href="#none" class="mob_btn mOpen">
+        <a href="#" class="mob_btn mOpen">
           <span>1</span>
           <span>2</span>
           <span>3</span>
         </a>
-      </div>
-      <div class="subNav">
-        <div class="inner">
-          <div class="sub_menu">
-            <ul class="depth1">
-              <li>
-                <span>사업안내</span>
-                <ul class="depth2">
-                  <li><a href="#none">사업 소개</a></li>
-                  <li><a href="#none">앱 소개</a></li>
-                  <li><a href="#none">참여자 안내</a></li>
-                </ul>
-              </li>
-              <li>
-                <span>건강정보</span>
-                <ul class="depth2">
-                  <li><a href="#none">건강 정보</a></li>
-                </ul>
-              </li>
-              <li>
-                <span>안내 및 제휴</span>
-                <ul class="depth2">
-                  <li><a href="#none">공지사항</a></li>
-                  <li><a href="#none">오류 안내</a></li>
-                  <li><a href="#none">시스템 문의</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="site_group">
-          <a href="#none" class="site_name">로그인</a>
-          <a href="#none" class="site_name">회원가입</a>
-        </div>
-      </div>
-      <div class="header_right">
-        <div class="header_tit">
-          <a href="#" class="mob_olny">
-            <img src="image/m_logo.png" alt="logo">
-          </a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <header class="dsk_olny">
-    <div class="rel">
-      <div class="header_left">
-        <a href="#none" class="mob_btn mOpen">
-          <span>1</span>
-          <span>2</span>
-          <span>3</span>
-        </a>
-        <div class="dsk_only">
-          다른 내용이 궁금하다면?
-        </div>
       </div>
       <div class="subNav">
         <div class="inner">
@@ -146,30 +90,34 @@
         </div>
       </div>
     </div>
-    <div id="main_gnb" class="dsk_only">
-      <ul class="gnb">
-        <li>
-          <span class="main"><a href="#none">사업안내</a></span>
-          <ul class="sub">
-            <li><a href="#none">사업 소개</a></li>
-            <li><a href="#none">앱 소개</a></li>
-            <li><a href="#none">참여자 안내</a></li>
-          </ul>
-        </li>
-        <li>
-          <span class="main"><a href="#none">건강정보</a></span>
-        </li>
-        <li>
-          <span class="main"><a href="#none">안내 및 제휴</a></span>
-          <ul class="sub">
-            <li><a href="#none">공지사항</a></li>
-            <li><a href="#none">오류 안내</a></li>
-            <li><a href="#none">시스템 문의</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
   </section>
+
+  <nav id="main_gnb" class="dsk_only">
+    <ul class="gnb">
+      <li class="main"><a href="#none">사업안내</a>
+        <ul class="sub">
+          <li><a href="#none">사업 소개</a></li>
+          <li><a href="#none">앱 소개</a></li>
+          <li><a href="#none">참여자 안내</a></li>
+        </ul>
+      </li>
+      <li class="main"><a href="#none">건강정보</a>
+      </li>
+      <li class="main"><a href="#none">안내 및 제휴</a>
+        <ul class="sub">
+          <li><a href="#none">공지사항</a></li>
+          <li><a href="#none">오류 안내</a></li>
+          <li><a href="#none">시스템 문의</a></li>
+        </ul>
+      </li>
+      <li class="main"><a href="#none">로그인</a>
+        <ul class="sub">
+          <li><a href="#none">로그인</a></li>
+          <li><a href="#none">회원가입</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
 
   <section id="section1">
     <div class="rel">
@@ -268,7 +216,7 @@
       <div class="group1">
         <div class="tit_wrap">
           <h2 class="tit">
-            손목닥터9988과 함께라면<br><b><em>99</em>세까지 <em>팔팔</em>하게!</b>
+            손목닥터9988과 <br class="mob_olny">함께라면<br><b><em>99</em>세까지 <em>팔팔</em>하게!</b>
           </h2>
           <p class="txt">
             건강관리 실천하며<br>포인트를 차곡차곡 모아<br>쏠쏠하게 사용해 보세요
@@ -392,7 +340,7 @@
     <div class="rel">
       <div class="tit_wrap">
         <h2 class="tit right">
-          목표를 설정하고<br>매일 도착하는 나를 위한<br><strong>건강리포트</strong>를 확인해요
+          목표를 설정하고<br>매일 도착하는<br> 나만의 <strong>건강리포트</strong>를<br> 확인해보세요
         </h2>
         <div class="btn_right"><a href="#none" class="btn">자세히 보기</a></div>
       </div>
